Implement compare-all API operation
